fitness_hls/fitness_hls/logs/hls_run_csim_41576.backup.log
  **** HLS Build v2024.2 5238294
INFO: [HLS 200-2005] Using work_dir D:/FPGA/fitness_function/fitness_hls/fitness_hls 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
WARNING: [HLS 200-2001] file not found 'fitness_function_top.cppfitness_function_top.cpp' see [hls] from D:/FPGA/fitness_function/fitness_hls/hls_config.cfg(10)
INFO: [HLS 200-1465] Applying ini 'syn.file=D:/FPGA/Fitness_A/Fitness_A/Fitness_Accelerator/fitness_kernel_hls.cpp' from D:/FPGA/fitness_function/fitness_hls/hls_config.cfg(9)
INFO: [HLS 200-10] Adding design file 'D:/FPGA/Fitness_A/Fitness_A/Fitness_Accelerator/fitness_kernel_hls.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=fitness_function_top.cppfitness_function_top.cpp' from D:/FPGA/fitness_function/fitness_hls/hls_config.cfg(10)
WARNING: [HLS 200-40] Cannot find design file 'fitness_function_top.cppfitness_function_top.cpp'
INFO: [HLS 200-1465] Applying ini 'syn.file=fitness_kernel_top.cpp' from D:/FPGA/fitness_function/fitness_hls/hls_config.cfg(11)
INFO: [HLS 200-10] Adding design file 'D:/FPGA/fitness_function/fitness_hls/fitness_kernel_top.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=D:/FPGA/Fitness_A/Fitness_A/Fitness_Accelerator/tb_fitness.cpp' from D:/FPGA/fitness_function/fitness_hls/hls_config.cfg(7)
INFO: [HLS 200-10] Adding test bench file 'D:/FPGA/Fitness_A/Fitness_A/Fitness_Accelerator/tb_fitness.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.top=fitness_kernel' from D:/FPGA/fitness_function/fitness_hls/hls_config.cfg(8)
INFO: [HLS 200-1465] Applying ini 'flow_target=vivado' from D:/FPGA/fitness_function/fitness_hls/hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'part=xczu7ev-ffvc1156-2-e' from D:/FPGA/fitness_function/fitness_hls/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xczu7ev-ffvc1156-2-e'
INFO: [HLS 200-1465] Applying ini 'package.output.format=ip_catalog' from D:/FPGA/fitness_function/fitness_hls/hls_config.cfg(5)
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch CLANG as the compiler.
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../../../Fitness_A/Fitness_A/Fitness_Accelerator/tb_fitness.cpp in debug mode
   Compiling ../../../../fitness_kernel_top.cpp in debug mode
   Compiling ../../../../../../Fitness_A/Fitness_A/Fitness_Accelerator/fitness_kernel_hls.cpp in debug mode
csim.mk:100: recipe for target 'obj/fitness_kernel_hls.o' failed
In file included from ../../../../fitness_kernel_top.cpp:2:
In file included from D:/Xilinx/Vitis/2024.2/include/ap_int.h:10:
In file included from D:/Xilinx/Vitis/2024.2/include/etc/ap_common.h:658:
In file included from D:/Xilinx/Vitis/2024.2/include/etc/ap_private.h:68:
In file included from D:/Xilinx/Vitis/2024.2/include/hls_half.h:26:
In file included from D:/Xilinx/Vitis/2024.2/include/etc/hls_half_fpo.h:19:
In file included from D:/Xilinx/Vitis/2024.2/include/hls_fpo.h:140:
In file included from D:/Xilinx/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:150:
D:/Xilinx/Vitis/2024.2/include/gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
D:/Xilinx/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
1 warning generated.
In file included from ../../../../../../Fitness_A/Fitness_A/Fitness_Accelerator/fitness_kernel_hls.cpp:3:
In file included from D:/Xilinx/Vitis/2024.2/include/ap_int.h:10:
In file included from D:/Xilinx/Vitis/2024.2/include/etc/ap_common.h:658:
In file included from D:/Xilinx/Vitis/2024.2/include/etc/ap_private.h:68:
In file included from D:/Xilinx/Vitis/2024.2/include/hls_half.h:26:
In file included from D:/Xilinx/Vitis/2024.2/include/etc/hls_half_fpo.h:19:
In file included from D:/Xilinx/Vitis/2024.2/include/hls_fpo.h:140:
In file included from D:/Xilinx/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:150:
D:/Xilinx/Vitis/2024.2/include/gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
D:/Xilinx/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
../../../../../../Fitness_A/Fitness_A/Fitness_Accelerator/fitness_kernel_hls.cpp:8:17: error: use of undeclared identifier 'packed_t'
    hls::stream<packed_t> &chromosome_stream,
                ^
../../../../../../Fitness_A/Fitness_A/Fitness_Accelerator/fitness_kernel_hls.cpp:27:37: error: use of undeclared identifier 'MAX_GENES'
    static float local_vector_cache[MAX_GENES * MAX_DIM];
                                    ^
../../../../../../Fitness_A/Fitness_A/Fitness_Accelerator/fitness_kernel_hls.cpp:27:49: error: use of undeclared identifier 'MAX_DIM'
    static float local_vector_cache[MAX_GENES * MAX_DIM];
                                                ^
../../../../../../Fitness_A/Fitness_A/Fitness_Accelerator/fitness_kernel_hls.cpp:51:20: error: use of undeclared identifier 'MAX_DIM'
        float sumA[MAX_DIM] = {0};
                   ^
../../../../../../Fitness_A/Fitness_A/Fitness_Accelerator/fitness_kernel_hls.cpp:52:20: error: use of undeclared identifier 'MAX_DIM'
        float sumB[MAX_DIM] = {0};
                   ^
../../../../../../Fitness_A/Fitness_A/Fitness_Accelerator/fitness_kernel_hls.cpp:56:46: error: use of undeclared identifier 'BITS_PER_CHUNK'
        const int num_chunks = (chromo_len + BITS_PER_CHUNK - 1) / BITS_PER_CHUNK;
                                             ^
../../../../../../Fitness_A/Fitness_A/Fitness_Accelerator/fitness_kernel_hls.cpp:56:68: error: use of undeclared identifier 'BITS_PER_CHUNK'
        const int num_chunks = (chromo_len + BITS_PER_CHUNK - 1) / BITS_PER_CHUNK;
                                                                   ^
../../../../../../Fitness_A/Fitness_A/Fitness_Accelerator/fitness_kernel_hls.cpp:61:13: error: unknown type name 'packed_t'
            packed_t genes = chromosome_stream.read();
            ^
../../../../../../Fitness_A/Fitness_A/Fitness_Accelerator/fitness_kernel_hls.cpp:63:47: error: use of undeclared identifier 'BITS_PER_CHUNK'
            bit_loop: for (int bit = 0; bit < BITS_PER_CHUNK; bit++) {
                                              ^
../../../../../../Fitness_A/Fitness_A/Fitness_Accelerator/fitness_kernel_hls.cpp:65:40: error: use of undeclared identifier 'BITS_PER_CHUNK'
                int gene_idx = chunk * BITS_PER_CHUNK + bit;
                                       ^
../../../../../../Fitness_A/Fitness_A/Fitness_Accelerator/fitness_kernel_hls.cpp:70:61: error: use of undeclared identifier 'PARTIAL_UNROLL'
                    dim_loop: for (int d = 0; d < dim; d += PARTIAL_UNROLL) {
                                                            ^
../../../../../../Fitness_A/Fitness_A/Fitness_Accelerator/fitness_kernel_hls.cpp:72:39: error: use of undeclared identifier 'PARTIAL_UNROLL'
                        int end = d + PARTIAL_UNROLL;
                                      ^
1 warning and 12 errors generated.
make: *** [obj/fitness_kernel_hls.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: 4
INFO: [HLS 200-112] Total CPU user time: 4 seconds. Total CPU system time: 2 seconds. Total elapsed time: 65.408 seconds; peak allocated memory: 163.211 MB.
